--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/moreal/learn-libp2p-js/issues"
   },
-  "homepage": "https://github.com/moreal/learn-libp2p-js#readme"
+  "homepage": "https://github.com/moreal/learn-libp2p-js#readme",
+  "dependencies": {
+    "libp2p": "^0.36.2",
+    "libp2p-bootstrap": "^0.14.0",
+    "libp2p-mplex": "^0.10.7",
+    "libp2p-noise": "^4.0.0",
+    "libp2p-websockets": "^0.16.2"
+  },
+  "devDependencies": {
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
+  }
 }
